@startuml
top to bottom direction
title 📚 Système Hadron – Version Commentée (pédagogique)

' ===========================
' CONTEXTE 1 - PRODUCTION DE QUARKS
' ===========================
package "ParticleBC (Production de Quarks)" as ParticleBC {

  class QuarkAggregate {
    - id: QuarkId
    - type: QuarkType
    - isAntiparticle: bool
    + register(type: string, isAntiparticle: bool)
  }

  note right of QuarkAggregate
    Ici, les quarks sont créés officiellement.
    La création suit les règles métier validées.
  end note

  together {
    interface QuarkWriteRepositoryInterface
    interface QuarkReadRepositoryInterface
  }

  class QuarkCreated <<event>>

  note bottom of QuarkCreated
    Un événement historique immuable.
    Trace qu'un quark a été créé.
  end note
}

' ===========================
' CONTEXTE 2 - ASSEMBLAGE DE HADRONS
' ===========================
package "HadronBC (Assemblage de Hadrons)" as HadronBC {

  class HadronAggregate {
    - quarkIds: QuarkId[]
    - type: string
    + create(quarkIds: QuarkId[], type: string)
  }

  note right of HadronAggregate
    Compose plusieurs quarks pour créer
    une particule plus complexe.
  end note

  together {  
    interface HadronWriteRepositoryInterface
    interface HadronReadRepositoryInterface
  }

  class HadronCompositionPolicy {
    + validate(quarkIds: QuarkId[]): bool
  }

  note bottom of HadronCompositionPolicy
    Règles scientifiques :
    - 3 quarks => Baryon
    - 2 quarks dont 1 antiquark => Méson
  end note

  class HadronCreationService {
    + assemble(quarkIds: QuarkId[])
  }

  class HadronCreated <<event>>

  note bottom of HadronCreated
    Un événement historique immuable.
    Trace qu'un hadron a été créé.
  end note
}

' ===========================
' INFRASTRUCTURE TECHNIQUE
' ===========================
package "Infrastructure" as Infrastructure {
  class InMemoryQuarkRepository
  class InMemoryHadronRepository
  class InMemoryEventStore
  class QuarkProjectionRepository
}

' ===========================
' RELATIONS
' ===========================
QuarkAggregate --> QuarkCreated : emits
QuarkAggregate --> QuarkWriteRepositoryInterface
QuarkWriteRepositoryInterface .down.> InMemoryQuarkRepository

QuarkCreated .down.> InMemoryEventStore : stored as event

InMemoryEventStore --> QuarkProjectionRepository : projection

QuarkProjectionRepository ..> HadronCompositionPolicy : fournit les quarks
HadronCompositionPolicy --> HadronCreationService : si valides
HadronCreationService --> HadronCreated : emits
HadronCreationService --> HadronWriteRepositoryInterface
HadronWriteRepositoryInterface .up.> InMemoryHadronRepository

HadronCreated .up.> InMemoryEventStore : stored as event
@enduml
